Revert "removed ducati panigale"
This reverts commit c76c3dc4758d61cb0b35e59e85e3a56f9f1474eb.

--- a/port.html
+++ b/port.html
@@ -20,10 +20,10 @@
             <img src="R1M.jpg" alt="Yamaha R1" />
             <h3>Yamaha R1</h3>
         </div>
-        <!-- <div class="bike-card" onclick="showDetails('Ducati Panigale V4', '1103cc, 214HP, 310km/h')">
+        <div class="bike-card" onclick="showDetails('Ducati Panigale V4', '1103cc, 214HP, 310km/h')">
             <img src="V4.jpg" alt="Ducati Panigale V4" />
             <h3>Ducati Panigale V4</h3>
-        </div> -->
+        </div>
         <div class="bike-card" onclick="showDetails('Kawasaki Ninja H2', '998cc, 231HP, 337km/h')">
             <img src="H2.jpg" alt="Kawasaki Ninja H2" />
             <h3>Kawasaki Ninja H2</h3>
